--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-use-cookie": "^1.6.1",
+    "swiper": "^11.1.15",
     "swr": "^2.2.5",
     "zustand": "^4.5.5"
   },
